--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@ body, html {
     height: 100%;
     min-height: 100%;
     background-color: #000000;
+    overflow-x:hidden;
 }
+
 .main {
     overflow-x: hidden;
 }
@@ -102,4 +104,30 @@ nav {
     transform: rotate(135deg);
     color: #fff;
     text-decoration: none;
+}
+
+.videoControlPanet{
+    position: absolute;
+    top: 5%;
+    right: 10%;
+    padding: 20px;
+    background: #000;
+    border-radius: 40px;
+    opacity: .4;
+    cursor: pointer;
+    z-index: 1001;
+}
+#flag-en{
+    height: 14px;
+  }
+#flag-bg{
+    height: 14px;
+ }
+#videoBGSubs{
+    position: absolute;
+    bottom: 5%;
+    right: 27%;
+    padding: 20px;
+    background: #000;
+   
 }
