--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body, html {
     height: 100%;
     min-height: 100%;
     background-color: #000000;
-    overflow-x:hidden;
+    // overflow-x:hidden;
     color: #FFF;
 }
 
