--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body, html {
     height: 100%;
     min-height: 100%;
     background-color: #000000;
-    // overflow-x:hidden;
+    overflow-x:hidden;
     color: #FFF;
 }
 
@@ -61,16 +61,6 @@ body, html {
     color: #ffffff;
     padding: 0 8%;
     text-align: center
-}
-
-/*#endregion background*/
-
-
-.wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
 }
 
 /* Nav */
@@ -239,8 +229,7 @@ body, html {
     }
 }
 
-
-.videoControlPanet{
+.videoControlPanel {
     position: absolute;
     top: 5%;
     right: 10%;
@@ -251,16 +240,20 @@ body, html {
     cursor: pointer;
     z-index: 1001;
 }
-#flag-en{
+
+#flag-en {
     height: 14px;
-  }
-#flag-bg{
+}
+
+#flag-bg {
     height: 14px;
- }
-#videoBGSubs{
+}
+
+#videoBGSubs {
     position: absolute;
     bottom: 5%;
     right: 27%;
     padding: 20px;
     background: #000;
 }
+
