Removed unneeded fonts. Removed old index.html. Styled controll buttons.

--- a/less/variables.less
+++ b/less/variables.less
@@ -7,7 +7,8 @@
 @background-menus:rgba(78,78,78,0.6);
 @background-def: #5F854E;
 
-@main-green: #008F00;
+@light-green: rgb(141, 198, 63);
+@dark-green: rgb(8, 148, 68);
 @round: 6px;
 @round-inner: 4px;
 
