--- a/less/pbioc.less
+++ b/less/pbioc.less
@@ -57,11 +57,6 @@ a {
     color: @light;
 }
 
-.rounded-border {
-    border: 1px solid @main-green;
-    border-radius: @round;
-}
-
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid fade(@light, 30%);
@@ -86,6 +81,7 @@ a {
     }
     .nav {
         li {
+            text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.5);
             &.active {
                 outline: nonte;
                 background-color: fade(@light, 30%);
@@ -95,7 +91,6 @@ a {
                 -moz-transition: background .3s ease-in-out;
                 transition: background .3s ease-in-out;
                 &:hover {
-                    text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.5);
                     color: #FFF;
                     background-color: transparent;
                 }
@@ -106,7 +101,45 @@ a {
                 }
             }
         }
+ 
+        input[type=checkbox] {
+            display:none;
+        }
+
+        input[type=checkbox] + label {
+            height: 16px;
+            width: 16px;
+            display:inline-block;
+            padding: 0 0 0 0px;
+            margin: 0 5px;
+        }
+
+        .volume-btn input[type=checkbox] + label:before {
+            content: "\f026";
+            font-family: FontAwesome;
+        }
+
+        .volume-btn input[type=checkbox]:checked + label:before {
+            content: "\f028";
+            font-family: FontAwesome;
+        }
+
+        .subs-btn input[type=checkbox] + label:before {
+            content: "sub";
+            font-family: FontAwesome;
+            text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.5);
+        }
+
+        .subs-btn input[type=checkbox]:checked + label:before {
+            text-shadow: 0 -1px 10px rgb(0, 0, 0);
+        }
+
+        .controlls {
+            padding: 13px;
+            margin-left: 30px;
+        }
     }
+
 }
 
 .navbar-custom-catalog {
@@ -169,52 +202,52 @@ a {
         padding-bottom: 20px;
 
         .left {
-           clear: both;
-        }
-    }
+         clear: both;
+     }
+ }
 
-    .side-box-quantity {
-        padding-left: 5px;
-        padding-top: 1px;
-        float: left;
-    }
+ .side-box-quantity {
+    padding-left: 5px;
+    padding-top: 1px;
+    float: left;
+}
 
-    i {
-        color: black;
-    }
+i {
+    color: black;
+}
 
-    .side-box-total {
-        background-color: @background-menus;
-        overflow: auto;
-        color: #fff;
-        font-size: 16px;
-    }
+.side-box-total {
+    background-color: @background-menus;
+    overflow: auto;
+    color: #fff;
+    font-size: 16px;
+}
 
-    p {
-        padding-right: 10px;
-        padding-left: 5px;
-    }
+p {
+    padding-right: 10px;
+    padding-left: 5px;
+}
 
-    .checkbox label {
-        font-weight: bold;
-    }
+.checkbox label {
+    font-weight: bold;
+}
 
-    input[type=checkbox] {
-        margin-top: 5px;
-    }
+input[type=checkbox] {
+    margin-top: 5px;
+}
 
-    input[type=radio] {
-        margin-left: -14px;
-    }
+input[type=radio] {
+    margin-left: -14px;
+}
 
-    span.radio-label {
-        margin-left: 5px;
-        font-weight: bold;
-    }
+span.radio-label {
+    margin-left: 5px;
+    font-weight: bold;
+}
 
-    .last {
-        margin-bottom: 5px;
-    }
+.last {
+    margin-bottom: 5px;
+}
 }
 
 .soap {
@@ -258,20 +291,26 @@ a {
     right: 0;
 }
 
+#video-wrap {
+
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
 .intro {
-    display: table;
-    width: 100%;
-    height: auto;
-    padding: 100px 0;
+    top: 80%;
+    position: absolute;
     text-align: center;
+    width: 100%;
     color: @light;
-    background-color: @background-def;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+
     .intro-body {
-        display: table-cell;
         vertical-align: middle;
         .brand-heading {
             font-size: 40px;
@@ -573,188 +612,18 @@ label {
     text-align: center
 }
 
-/* Video controller styles */
-.videoControlPanel {
-position: absolute;
-top: 5%;
-right: 10%;
-padding: 20px;
-background: #000;
-	    border-radius: 40px;
-opacity: .4;
-cursor: pointer;
-	z-index: 1001;
-}
-
 #flag-en {
-height: 14px;
+    height: 14px;
 }
 
 #flag-bg {
-height: 14px;
+    height: 14px;
 }
 
 #videoBGSubs {
-position: absolute;
-bottom: 5%;
-right: 27%;
-padding: 20px;
-background: #000;
-}
-
-
-/* Bounce next arrow */
-
-.animated-arrow.hinge {
-	-webkit-animation-duration: 2s;
-	-moz-animation-duration: 2s;
-	-o-animation-duration: 2s;
-	-ms-animation-duration: 2s;
-	animation-duration: 2s;
-	-webkit-animation-iteration-count: infinite;
-	-moz-animation-iteration-count: infinite;
-	-o-animation-iteration-count: infinite;
-	-ms-animation-iteration-count: infinite;
-	animation-iteration-count: infinite;
-	-webkit-animation-delay: 1s;
-	-moz-animation-delay: 1s;
-	-o-animation-delay: 1s;
-	-ms-animation-delay: 1s;
-	animation-delay: 1s;
-}
-
-.animated-arrow {
-	-webkit-animation-fill-mode: both;
-	-moz-animation-fill-mode: both;
-	-o-animation-fill-mode: both;
-	-ms-animation-fill-mode: both;
-	animation-fill-mode: both;
-	-webkit-animation-duration: 1s;
-	-moz-animation-duration: 1s;
-	-o-animation-duration: 1s;
-	-ms-animation-duration: 1s;
-	animation-duration: 1s;
-}
-
-.bounce {
-	-webkit-animation-name: bounce;
-	-moz-animation-name: bounce;
-	-o-animation-name: bounce;
-	-ms-animation-name: bounce;
-	animation-name: bounce;
-}
-
-.desktop {
-display: block;
-}
-
-.next-btn {
-position: absolute;
-bottom: 100px;
-left: 50%;
-      margin-left: -30px;
-}
-
-@-moz-keyframes bounce {
-	0%,20%,50%,80%,100% {
-		-webkit-transform: translateY(0);
-		-moz-transform: translateY(0);
-		-o-transform: translateY(0);
-		-ms-transform: translateY(0);
-transform: translateY(0);
-	}
-
-	40% {
-		-webkit-transform: translateY(-30px);
-		-moz-transform: translateY(-30px);
-		-o-transform: translateY(-30px);
-		-ms-transform: translateY(-30px);
-transform: translateY(-30px);
-	}
-
-	60% {
-		-webkit-transform: translateY(-15px);
-		-moz-transform: translateY(-15px);
-		-o-transform: translateY(-15px);
-		-ms-transform: translateY(-15px);
-transform: translateY(-15px);
-	}
-}
-
-@-webkit-keyframes bounce {
-	0%,20%,50%,80%,100% {
-		-webkit-transform: translateY(0);
-		-moz-transform: translateY(0);
-		-o-transform: translateY(0);
-		-ms-transform: translateY(0);
-transform: translateY(0);
-	}
-
-	40% {
-		-webkit-transform: translateY(-30px);
-		-moz-transform: translateY(-30px);
-		-o-transform: translateY(-30px);
-		-ms-transform: translateY(-30px);
-transform: translateY(-30px);
-	}
-
-	60% {
-		-webkit-transform: translateY(-15px);
-		-moz-transform: translateY(-15px);
-		-o-transform: translateY(-15px);
-		-ms-transform: translateY(-15px);
-transform: translateY(-15px);
-	}
-}
-
-@-o-keyframes bounce {
-	0%,20%,50%,80%,100% {
-		-webkit-transform: translateY(0);
-		-moz-transform: translateY(0);
-		-o-transform: translateY(0);
-		-ms-transform: translateY(0);
-transform: translateY(0);
-	}
-
-	40% {
-		-webkit-transform: translateY(-30px);
-		-moz-transform: translateY(-30px);
-		-o-transform: translateY(-30px);
-		-ms-transform: translateY(-30px);
-transform: translateY(-30px);
-	}
-
-	60% {
-		-webkit-transform: translateY(-15px);
-		-moz-transform: translateY(-15px);
-		-o-transform: translateY(-15px);
-		-ms-transform: translateY(-15px);
-transform: translateY(-15px);
-	}
-}
-
-@keyframes bounce {
-	0%,20%,50%,80%,100% {
-		-webkit-transform: translateY(0);
-		-moz-transform: translateY(0);
-		-o-transform: translateY(0);
-		-ms-transform: translateY(0);
-transform: translateY(0);
-	}
-
-	40% {
-		-webkit-transform: translateY(-30px);
-		-moz-transform: translateY(-30px);
-		-o-transform: translateY(-30px);
-		-ms-transform: translateY(-30px);
-transform: translateY(-30px);
-	}
-
-	60% {
-		-webkit-transform: translateY(-15px);
-		-moz-transform: translateY(-15px);
-		-o-transform: translateY(-15px);
-		-ms-transform: translateY(-15px);
-transform: translateY(-15px);
-	}
+    position: absolute;
+    bottom: 5%;
+    right: 27%;
+    padding: 20px;
+    background: #000;
 }
