--- a/less/pbioc.less
+++ b/less/pbioc.less
@@ -54,7 +54,11 @@ a {
 
 .light {
     font-weight: 400;
-    color: @light;
+    color: @light-orange;
+}
+.pbioc-logo {
+    width: 50px; 
+    height: 50px;
 }
 
 .navbar-custom {
