--- a/less/variables.less
+++ b/less/variables.less
@@ -1,15 +1,16 @@
 // Variables
 
-@primary: #008F00;
+@primary: #fff;
 
 @dark: #000;
 @light: #fff;
-@background-menus:rgba(78,78,78,0.6);
+@menu-link: #646464;
+@background-menus:rgba(255, 255, 255, 0.9);
 @background-def: #5F854E;
 
 @light-green: rgb(141, 198, 63);
 @dark-green: rgb(8, 148, 68);
-@light-orange: #D09B67;
+@light-green: #5CA676;
 @round: 6px;
 @round-inner: 4px;
 
