--- a/less/variables.less
+++ b/less/variables.less
@@ -4,7 +4,7 @@
 
 @dark: #000;
 @light: #fff;
-@menu-link: #646464;
+@menu-link: #5ca676;
 @background-menus:rgba(255, 255, 255, 0.9);
 @background-def: #5F854E;
 
@@ -14,7 +14,9 @@
 @round: 6px;
 @round-inner: 4px;
 
-@font-family-body:TisaWebPro,Georgia,"Times New Roman",Times,serif;
-@font-family-menus:"Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+//@font-family-body:TisaWebPro,Georgia,"Times New Roman",Times,serif;
+//@font-family-menus:"Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
 
+@font-family-body: 'Roboto', sans-serif;
+@font-family-menus: 'Roboto', sans-serif;
 // @main-background-img: url('../img/main-bg.png')
