--- a/less/pbioc.less
+++ b/less/pbioc.less
@@ -1,6 +1,18 @@
 @import "variables.less";
 @import "mixins.less";
 
+video#bgvid {
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    height: 100%;
+    background: url(poster.jpg) no-repeat;
+}
+
+#landing {
+    min-height: 100%;
+}
+
 body, html {
 
     background-color: #fff;
@@ -13,6 +25,12 @@ body, html {
     text-rendering:optimizeLegibility;
 
     webkit-tap-highlight-color: fade(@light, 20%);
+}
+
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -50,264 +68,6 @@ a {
     }
 }
 
-.light {
-    font-weight: 400;
-    color: @light-green;
-}
-.pbioc-logo {
-    width: 50px; 
-    height: 50px;
-}
-
-.navbar-custom {
-    margin-bottom: 0;
-    border-bottom: 1px solid fade(@light, 30%);
-    font-family: @font-family-menus;
-    .navbar-brand {
-        padding:0px;
-        font-weight: 300;
-        &:focus {
-            outline: none;
-        }
-        .navbar-toggle {
-            padding: 4px 6px;
-            font-size: 16px;
-            color: @light;
-            &:focus,
-            &:active {
-                outline: none;
-            }
-        }
-    }
-    a {
-        color: @menu-link;
-    }
-    .nav {
-        li {
-            
-            &.active {
-                outline: nonte;
-                background-color: fade(@menu-link, 10%);
-            }
-            a {
-                -webkit-transition: background .3s ease-in-out;
-                -moz-transition: background .3s ease-in-out;
-                transition: background .3s ease-in-out;
-                &:hover {
-                    background-color: transparent;
-                }
-                &:focus,
-                &.active {
-                    outline: none;
-                    background-color: fade(@light, 30%);
-                }
-            }
-        }
- 
-        input[type=checkbox] {
-            display:none;
-        }
-
-        input[type=checkbox] + label {
-            height: 16px;
-            width: 16px;
-            display:inline-block;
-            padding: 0 0 0 0px;
-            margin: 0 5px;
-        }
-
-        .volume-btn {
-            color: @menu-link;
-        }
-        .volume-btn input[type=checkbox] + label:before {
-            content: "\f026";
-            font-family: FontAwesome;
-        }
-
-        .volume-btn input[type=checkbox]:checked + label:before {
-            content: "\f028";
-            font-family: FontAwesome;
-        }
-
-        .subs-btn input[type=checkbox] + label:before {
-            content: "sub";
-            font-family: FontAwesome;
-            color: darken(@light, 30%);
-        }
-
-        .subs-btn input[type=checkbox]:checked + label:before {
-            color: @menu-link;
-        }
-
-        .controlls {
-            padding: 13px;
-            margin-left: 30px;
-        }
-    }
-
-}
-
-.navbar-custom-catalog {
-    border-bottom: none;
-}
-
-.navbar-right-custom {
-    font-family: @font-family-menus;
-    font-weight: 300;
-    font-size: 16px;
-}
-
-//TODO: mix categories and items for catalog - they have a lot in common
-.catalog-categories {
-    border: solid 2px gray;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 5px #888888;
-    text-transform: uppercase;
-    font-family: @font-family-menus;
-    font-weight: 300;
-    letter-spacing: 1px;
-}
-
-.checkbox-categories {
-    padding-left: 5px;
-}
-
-.catalog-item {
-    img { border: solid 1px;}
-
-    font-family: @font-family-menus;
-    font-weight: 300;
-    font-size: 16px;
-}
-
-.to-left {
-    float: left;
-    font-size: 14px;
-}
-
-.side-box-container {
-    min-width: 180px;
-}
-
-.side-box {
-    font-weight: bold;
-    font-size: 14px;
-
-    .side-box-title {
-        background-color: @background-menus;
-        overflow: auto;
-        font-size: 16px;
-        color: #fff;
-    }
-
-    .side-box-items {
-        padding-top: 5px;
-        padding-bottom: 20px;
-
-        .left {
-         clear: both;
-     }
- }
-
- .side-box-quantity {
-    padding-left: 5px;
-    padding-top: 1px;
-    float: left;
-}
-
-i {
-    color: black;
-}
-
-.side-box-total {
-    background-color: @background-menus;
-    overflow: auto;
-    color: #fff;
-    font-size: 16px;
-}
-
-p {
-    padding-right: 10px;
-    padding-left: 5px;
-}
-
-.checkbox label {
-    font-weight: bold;
-}
-
-input[type=checkbox] {
-    margin-top: 5px;
-}
-
-input[type=radio] {
-    margin-left: -14px;
-}
-
-span.radio-label {
-    margin-left: 5px;
-    font-weight: bold;
-}
-
-.last {
-    margin-bottom: 5px;
-}
-}
-
-.soap {
-    background-color: #FFF;
-    margin-bottom: 20px;
-    .soap-info {
-        font-weight: bold;
-        margin-top: 10px;
-        text-align: center;
-    }
-
-    img {
-        width: 100%;
-        height: 100%;
-        border-radius: @round-inner;
-    }
-
-    h4 {
-        margin-top: 5px;
-        margin-bottom: 5px;
-        font-size: 16px;
-    }
-
-    p {
-        text-align: center;
-        font-size: 14px;
-        margin-bottom: 5px;
-        text-align: left;
-    }
-}
-
-.soap-item {
-    width: 190px;
-    min-height: 205px; 
-    margin: 8px;
-}
-
-#social-facebook {
-    position: absolute;
-    top: 1.25rem;
-    right: 0;
-}
-
-#video-wrap {
-
-}
-
-.hide {
-    display: none;
-}
-
-.show {
-    display: block;
-}
-
 .intro {
     top: 80%;
     position: absolute;
@@ -327,6 +87,304 @@ span.radio-label {
     }
 }
 
+.contact-section {
+    background-color: #5b9b40;
+    display: table;
+    width: 100%;
+    height: 100%;
+    padding: 50px 0;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+
+    table {
+        td {
+            padding: 5px 10px;
+            font-size: 16pt;
+            text-align: left;
+            i {
+                text-align: right;
+            }
+        }
+    }
+
+    h2 {
+        margin-bottom: 45px;
+    }
+
+    .banner-social-buttons {
+        margin-top: 45px;
+    }
+}
+
+.btn {
+    text-transform: uppercase;
+    font-family: @font-family-menus;
+    font-weight: 400;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+
+.btn-default {
+    margin-top: 10px;
+    color: @primary;
+    background-color: transparent;
+    &:hover,
+    &:focus {
+        outline: none;
+        color: @light;
+        background-color: @transparent-btn;
+    }
+}
+
+footer {
+    padding: 50px 0;
+    p {
+        margin: 0;
+    }
+    background-color: @light;
+    color: @menu-link;
+}
+
+.paragraph-small {
+    font-size: 16px;
+    font-style: italic;
+}
+.order-box {
+    display: none;
+}
+
+
+/* TODO change with less variables */
+/* section background */
+.bcg {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    width: 100%;
+}
+
+#team {
+    height: 400px;
+    .bcg {
+        background-image: url('../img/doctors.jpg');
+        background-color: #fff;
+        background-size: 20%;
+    }
+}
+
+#methods {
+    height: 510px;
+    .bcg {
+        height: 100%;
+        background: none;
+        background-color: #6ba741;
+        text-align: center
+    }
+}
+
+#pricing {
+    height: 710px;
+    font-weight: 700;
+    .bcg {
+        background: @light;
+    }
+}
+
+#contacts {
+    height: 510px;
+    text-align: center;
+    .bcg {
+        background-color: #6ba741;
+    }
+    iframe {
+        border: 4px solid @light;
+    }
+}
+
+.hsContainer {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.hsContent {
+    max-width: 450px;
+    margin: -150px auto 0 auto;
+    display: table-cell;
+    vertical-align: middle;
+    color: #ffffff;
+    padding: 0 8%;
+    text-align: center
+}
+
+.shadower, .vjs-tech {
+    -webkit-box-shadow: 0 0 15px 5px #737373;
+    box-shadow: 0 0 15px 5px #737373;
+}
+
+/* Sidebar and wrapper styles */
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+    padding-left: 250px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    left: 250px;
+    width: 0;
+    height: 100%;
+    margin-left: -250px;
+    overflow-y: auto;
+    background: #000;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+}
+
+#page-content-wrapper {
+    width: 100%;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+}
+
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: #999999;
+}
+
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+    height: 65px;
+    font-size: 18px;
+    line-height: 60px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+    color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+} /* end sidebar styles */
+
+
+
+/* Media settings */
+
+@media(max-width:1199px) {
+    .banner-social-buttons {
+        margin-top: 45px;
+    }
+}
+
+@media(min-width:767px) {
+    p {
+        margin: 0px;
+        font-size: 20px;
+        line-height: 1.6;
+    }
+
+    .banner-social-buttons {
+        li {
+            display: block;
+            margin-bottom: 40px;
+            padding: 0;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+
+    .intro {
+        height: 100%;
+        padding: 0;
+
+        .intro-body {
+            .brand-heading {
+                font-size: 100px;
+            }
+
+            .intro-text {
+                font-size: 25px;
+            }
+        }
+    }
+
+    /* Sidebar styles */
+    #wrapper {
+        padding-left: 250px;
+    }
+
+    #wrapper.toggled {
+        padding-left: 0;
+    }
+
+    #sidebar-wrapper {
+        width: 250px;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
+
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
+    }
+}
+
+/* Pulse button style */
 .btn-circle {
     width: 70px;
     height: 70px;
@@ -399,278 +457,4 @@ span.radio-label {
         transform: scale(1);
     }
 }
-
-.container-relative {
-    position: relative;
-}
-
-.contact-section {
-    background-color: #5b9b40;
-    display: table;
-    width: 100%;
-    height: 100%;
-    padding: 50px 0;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-
-    table {
-        td {
-            padding: 5px 10px;
-            font-size: 16pt;
-            text-align: left;
-            i {
-                text-align: right;
-            }
-        }
-    }
-
-    h2 {
-        margin-bottom: 45px;
-    }
-
-    .banner-social-buttons {
-        margin-top: 45px;
-    }
-}
-
-.btn {
-    text-transform: uppercase;
-    font-family: @font-family-menus;
-    font-weight: 400;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-}
-
-.btn-default {
-    margin-top: 10px;
-    color: @primary;
-    background-color: transparent;
-    &:hover,
-    &:focus {
-        outline: none;
-        color: @light;
-        background-color: @primary;
-    }
-}
-
-@media(max-width:1199px) {
-    .banner-social-buttons {
-        margin-top: 45px;
-    }
-}
-
-footer {
-    padding: 50px 0;
-    p {
-        margin: 0;
-    }
-    background-color: @light;
-    color: @menu-link;
-}
-
-::-moz-selection {
-    text-shadow: none;
-    background: #fcfcfc;
-    background: fade(@light, 20%);
-}
-
-::selection {
-    text-shadow: none;
-    background: #fcfcfc;
-    background: fade(@light, 20%);
-}
-
-img::selection {
-    background: transparent;
-}
-
-img::-moz-selection {
-    background: transparent;
-}
-
-.about {
-    h5 { margin-bottom:8px; margin-top:1rem; }
-    a { display:block; }
-}
-
-label {
-    cursor: pointer;
-}
-
-.paragraph-small {
-    font-size: 16px;
-    font-style: italic;
-}
-
-.left {
-    display: inline;
-    float: left;
-}
-
-.right {
-    display: inline;
-    float: right;
-}
-
-.order-box {
-    display: none;
-}
-
-@media(min-width:767px) {
-    p {
-        margin: 0px;
-        font-size: 20px;
-        line-height: 1.6;
-    }
-
-    .navbar {
-        padding: 20px 0;
-        border-bottom: none;
-        letter-spacing: 1px;
-        background: rgba(255, 255, 255, 0.9);
-        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
-
-
-        -webkit-transition: opacity .5s ease-in-out;
-        -moz-transition: opacity .5s ease-in-out;
-        transition: opacity .5s ease-in-out;
-        opacity: 0.3;
-        filter: alpha(opacity=30);
-
-        &:hover {
-            opacity: 1;
-            filter: alpha(opacity=30);
-            -webkit-transition: opacity .5s ease-in-out;
-            -moz-transition: opacity .5s ease-in-out;
-            transition: opacity .5s ease-in-out;
-        }
-    }
-
-    .top-nav-collapse {
-        padding: 0;
-        background-color:@background-menus;
-
-        -webkit-transition: opacity .5s ease-in-out;
-        -moz-transition: opacity .5s ease-in-out;
-        transition: opacity .5s ease-in-out;
-        opacity: 1;
-        filter: alpha(opacity=100);
-
-        .nav {
-            a {
-                &:hover {
-                    outline: none;
-                    background-color: fade(@light, 30%);
-                }
-            }
-        }
-    }
-
-    .banner-social-buttons {
-        li {
-            display: block;
-            margin-bottom: 40px;
-            padding: 0;
-            &:last-child {
-                margin-bottom: 0;
-            }
-        }
-    }
-
-    .intro {
-        height: 100%;
-        padding: 0;
-
-        .intro-body {
-            .brand-heading {
-                font-size: 100px;
-            }
-
-            .intro-text {
-                font-size: 25px;
-            }
-        }
-    }
-}
-
-
-/* TODO change with less variables */
-/* section background */
-.bcg {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    width: 100%;
-}
-
-#team {
-    height: 400px;
-    .bcg {
-        background-image: url('../img/doctors.jpg');
-        background-color: #fff;
-        background-size: 20%;
-    }
-}
-
-#methods {
-    height: 510px;
-    .bcg {
-        height: 100%;
-        background: none;
-        background-color: #6ba741;
-        text-align: center
-    }
-}
-
-#pricing {
-    height: 710px;
-    font-weight: 700;
-    .bcg {
-        background: @light;
-    }   
-}
-
-#contacts {
-    height: 510px;
-    text-align: center;
-    .bcg {
-        background-color: #6ba741;
-    }
-    iframe {
-        border: 4px solid @light;
-    }
-}
-
-.hsContainer {
-    display: table;
-    table-layout: fixed;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-}
-
-.hsContent {
-    max-width: 450px;
-    margin: -150px auto 0 auto;
-    display: table-cell;
-    vertical-align: middle;
-    color: #ffffff;
-    padding: 0 8%;
-    text-align: center
-}
-
-.shadower, .vjs-tech {
-    -webkit-box-shadow: 0 0 15px 5px #737373;
-    box-shadow: 0 0 15px 5px #737373;
-}
-
-.lang-flag {
-    border: 1px solid @menu-link;
-}
+/* End pulse button style */
