Removed video libs

--- a/less/pbioc.less
+++ b/less/pbioc.less
@@ -6,7 +6,7 @@ video#bgvid {
     min-height: 100%;
     width: 100%;
     height: 100%;
-    background: url(poster.jpg) no-repeat;
+    background: url(../img/poster.jpg) no-repeat;
 }
 
 #landing {
@@ -68,22 +68,15 @@ a {
     }
 }
 
-.intro {
+.arrow {
     top: 80%;
     position: absolute;
     text-align: center;
     width: 100%;
     color: @light;
 
-    .intro-body {
+    .arrow-body {
         vertical-align: middle;
-        .brand-heading {
-            font-size: 40px;
-        }
-
-        .intro-text {
-            font-size: 18px;
-        }
     }
 }
 
@@ -346,19 +339,9 @@ footer {
         }
     }
 
-    .intro {
+    .arrow {
         height: 100%;
         padding: 0;
-
-        .intro-body {
-            .brand-heading {
-                font-size: 100px;
-            }
-
-            .intro-text {
-                font-size: 25px;
-            }
-        }
     }
 
     /* Sidebar styles */
