--- a/less/pbioc.less
+++ b/less/pbioc.less
@@ -1,20 +1,4 @@
-@import "variables.less";
-@import "mixins.less";
-
-video#bgvid {
-    min-width: 100%;
-    min-height: 100%;
-    width: 100%;
-    height: 100%;
-    background: url(../img/poster.jpg) no-repeat;
-}
-
-#landing {
-    min-height: 100%;
-}
-
 body, html {
-
     background-color: #fff;
     overflow-x:hidden;
     color: #fff;
@@ -28,14 +12,17 @@ body, html {
 }
 
 body {
-    height: 100%;
     margin: 0;
     padding: 0;
 }
 
-html {
-    width: 100%;
-    height: 100%;
+footer {
+    padding: 50px 0;
+    p {
+        margin: 0;
+    }
+    background-color: @light;
+    color: @menu-link;
 }
 
 h1,
@@ -68,49 +55,6 @@ a {
     }
 }
 
-.arrow {
-    top: 80%;
-    position: absolute;
-    text-align: center;
-    width: 100%;
-    color: @light;
-
-    .arrow-body {
-        vertical-align: middle;
-    }
-}
-
-.contact-section {
-    background-color: #5b9b40;
-    display: table;
-    width: 100%;
-    height: 100%;
-    padding: 50px 0;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-
-    table {
-        td {
-            padding: 5px 10px;
-            font-size: 16pt;
-            text-align: left;
-            i {
-                text-align: right;
-            }
-        }
-    }
-
-    h2 {
-        margin-bottom: 45px;
-    }
-
-    .banner-social-buttons {
-        margin-top: 45px;
-    }
-}
-
 .btn {
     text-transform: uppercase;
     font-family: @font-family-menus;
@@ -132,312 +76,21 @@ a {
     }
 }
 
-footer {
-    padding: 50px 0;
-    p {
-        margin: 0;
-    }
-    background-color: @light;
-    color: @menu-link;
-}
-
 .paragraph-small {
     font-size: 16px;
     font-style: italic;
 }
-.order-box {
-    display: none;
-}
 
-
-/* TODO change with less variables */
-/* section background */
-.bcg {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    width: 100%;
-}
-
-#team {
-    height: 400px;
-    .bcg {
-        background-image: url('../img/doctors.jpg');
-        background-color: #fff;
-        background-size: 20%;
-    }
-}
-
-#methods {
-    height: 510px;
-    .bcg {
-        height: 100%;
-        background: none;
-        background-color: #6ba741;
-        text-align: center
-    }
-}
-
-#pricing {
-    height: 710px;
-    font-weight: 700;
-    .bcg {
-        background: @light;
-    }
-}
-
-#contacts {
-    height: 510px;
-    text-align: center;
-    .bcg {
-        background-color: #6ba741;
-    }
-    iframe {
-        border: 4px solid @light;
-    }
-}
-
-.hsContainer {
-    display: table;
-    table-layout: fixed;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-}
-
-.hsContent {
-    max-width: 450px;
-    margin: -150px auto 0 auto;
-    display: table-cell;
-    vertical-align: middle;
-    color: #ffffff;
-    padding: 0 8%;
-    text-align: center
-}
-
-.shadower, .vjs-tech {
+.shadower {
     -webkit-box-shadow: 0 0 15px 5px #737373;
     box-shadow: 0 0 15px 5px #737373;
 }
 
-/* Sidebar and wrapper styles */
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled {
-    padding-left: 250px;
-}
-
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 250px;
-    width: 0;
-    height: 100%;
-    margin-left: -250px;
-    overflow-y: auto;
-    background: #000;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
-}
-
-#page-content-wrapper {
-    width: 100%;
-}
-
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
-}
-
-/* Sidebar Styles */
-
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-}
-
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999999;
-}
-
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-} /* end sidebar styles */
-
-
-
 /* Media settings */
-
-@media(max-width:1199px) {
-    .banner-social-buttons {
-        margin-top: 45px;
-    }
-}
-
 @media(min-width:767px) {
     p {
         margin: 0px;
         font-size: 20px;
         line-height: 1.6;
     }
-
-    .banner-social-buttons {
-        li {
-            display: block;
-            margin-bottom: 40px;
-            padding: 0;
-            &:last-child {
-                margin-bottom: 0;
-            }
-        }
-    }
-
-    .arrow {
-        height: 100%;
-        padding: 0;
-    }
-
-    /* Sidebar styles */
-    #wrapper {
-        padding-left: 250px;
-    }
-
-    #wrapper.toggled {
-        padding-left: 0;
-    }
-
-    #sidebar-wrapper {
-        width: 250px;
-    }
-
-    #wrapper.toggled #sidebar-wrapper {
-        width: 0;
-    }
-
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-    }
 }
-
-/* Pulse button style */
-.btn-circle {
-    width: 70px;
-    height: 70px;
-    margin-top: 15px;
-    padding: 7px 16px;
-    border: 2px solid @light;
-    border-radius: 35px;
-    font-size: 40px;
-    color: @light;
-    background: transparent;
-    -webkit-transition: background .3s ease-in-out;
-    -moz-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
-    &:hover,
-    &:focus {
-        outline: none;
-        color: @light;
-        background: fade(@light, 10%);
-    }
-    i.animated {
-        -webkit-transition-property: -webkit-transform;
-        -webkit-transition-duration: 1s;
-        -moz-transition-property: -moz-transform;
-        -moz-transition-duration: 1s;
-    }
-    &:hover {
-        i.animated {
-            -webkit-animation-name: pulse;
-            -moz-animation-name: pulse;
-            -webkit-animation-duration: 1.5s;
-            -moz-animation-duration: 1.5s;
-            -webkit-animation-iteration-count: infinite;
-            -moz-animation-iteration-count: infinite;
-            -webkit-animation-timing-function: linear;
-            -moz-animation-timing-function: linear;
-        }
-    }
-}
-
-@-webkit-keyframes pulse {
-    0 {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-
-    50% {
-        -webkit-transform: scale(1.2);
-        transform: scale(1.2);
-    }
-
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-}
-
-@-moz-keyframes pulse {
-    0 {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
-
-    50% {
-        -moz-transform: scale(1.2);
-        transform: scale(1.2);
-    }
-
-    100% {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
-}
-/* End pulse button style */
