--- a/less/nav/mobile.menu.btn.less
+++ b/less/nav/mobile.menu.btn.less
@@ -1,43 +1,24 @@
 /* Menu button */
 .mobileMenu {
     cursor: pointer;
-    float: right;
+    float: left;
     margin: 0;
     padding: 0;
     position: absolute;
     top: 25px;
-    right: 20px;
+    left: 20px;
     z-index: 40;
-}
 
-@media only screen and (min-width: 768px) {
-    .mobileMenu {
-        top: 35px;
-        right: 40px;
-    }
-}
-
-@media only screen and (min-width: 480px) {
-    .mobileMenu {
-        position: fixed;
-    }
+    -webkit-transition: all 340ms cubic-bezier(0.905,0.015,0.65,0.97);
+    -webkit-transition-delay: 0s;
+    -moz-transition: all 340ms cubic-bezier(0.905,0.015,0.65,0.97) 0s;
+    -o-transition: all 340ms cubic-bezier(0.905,0.015,0.65,0.97) 0s;
+    transition: all 340ms cubic-bezier(0.905,0.015,0.65,0.97) 0s;
 }
 
 .mobileMenu h2 {
     display: none;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
-}
-
-@media only screen and (min-width: 480px) {
-    .mobileMenu h2 {
-        color: white;
-        display: inline-block;
-        font-family: "Karla",Arial,sans-serif;
-        font-size: 20px;
-        margin: 0 5px 0 0;
-        text-transform: uppercase;
-        vertical-align: top;
-    }
 }
 
 .mobileMenu ul {
@@ -47,4 +28,51 @@
     padding: 0;
     vertical-align: top;
     width: 25px;
+    list-style: none outside;
+}
+
+.mobileMenu ul li {
+    background: white;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;
+    -webkit-box-shadow: rgba(0,0,0,0.2) 1px 1px 1px;
+    -moz-box-shadow: rgba(0,0,0,0.2) 1px 1px 1px;
+    box-shadow: rgba(0,0,0,0.2) 1px 1px 1px;
+    height: 3px;
+    margin: 3px 0;
+    width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+    .mobileMenu {
+        top: 35px;
+        left: 40px;
+    }
+}
+
+@media only screen and (min-width: 480px) {
+    .mobileMenu {
+        position: fixed;
+    }
+
+    .mobileMenu h2 {
+        color: white;
+        display: inline-block;
+        font-family: "Karla",Arial,sans-serif;
+        font-size: 20px;
+        margin: 0 5px 0 0;
+        text-transform: uppercase;
+        vertical-align: top;
+    }
+
+    .menuActive .mobileMenu {
+        -webkit-transform: translate3d(17.65em,0em,0em);
+        -moz-transform: translate3d(17.65em,0em,0em);
+        -ms-transform: translate3d(17.65em,0em,0em);
+        -o-transform: translate3d(17.65em,0em,0em);
+        transform: translate3d(17.65em,0em,0em);
+    }
 }
