Styled the sidemenu. Added some social icons at the bottom.

--- a/less/nav/arrow.less
+++ b/less/nav/arrow.less
@@ -1,7 +1,7 @@
 /* Pulse button style */
 
 .arrow {
-    top: 70%;
+    margin-top: 38%;
     position: absolute;
     text-align: center;
     width: 100%;
