--- a/less/variables.less
+++ b/less/variables.less
@@ -5,13 +5,13 @@
 
 @dark: #000;
 @light: #fff;
+@pearl: #FAF9F7;
 @menu-link: #5ca676;
 @background-menus:rgba(255, 255, 255, 0.9);
 @background-def: #5F854E;
 
-@light-green: rgb(141, 198, 63);
+@light-green: #8ab951;
 @dark-green: rgb(8, 148, 68);
-@light-green: #5CA676;
 @round: 6px;
 @round-inner: 4px;
 
@@ -19,3 +19,6 @@
 @font-family-menus: 'Roboto',Arial,sans-serif;
 
 // @main-background-img: url('../img/main-bg.png')
+@facebook-blue: #3b5998;
+@twitter-blue: #55acee;
+@linkedin-blue: #287bbc;
