--- a/less/nav/sidebar.less
+++ b/less/nav/sidebar.less
@@ -20,11 +20,44 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+
+    background-color: @light;
+
+    -webkit-box-shadow: inset -5px 0 6px 1px #D2D2D2;
+    box-shadow: inset -5px 0 6px 1px #D2D2D2;
+}
+
+#sidebar-wrapper .sidebar-footer {
+    position: absolute;
+    bottom: 0;
+    height: 100px;
+    width: 94%;
+}
+
+#sidebar-wrapper .sidebar-footer a {
+    color: @light-green;
+    font-size: 15pt;
+}
+
+#sidebar-wrapper .sidebar-footer .facebook:hover {
+    color: @facebook-blue;
+}
+
+#sidebar-wrapper .sidebar-footer .twitter:hover {
+    color: @twitter-blue;
+}
+
+#sidebar-wrapper .sidebar-footer .linkedin:hover {
+    color: @linkedin-blue;
+}
+
+#sidebar-wrapper .sidebar-footer .vimeo:hover {
+    color: @dark;
 }
 
 #wrapper.toggled #sidebar-wrapper {
@@ -54,39 +87,48 @@
 .sidebar-nav li {
     text-indent: 20px;
     line-height: 40px;
+    text-align: end;
+    padding-right: 35px;
+}
+
+.sidebar-nav .sidebar-brand {
+    padding-right: 0px;
+    margin-bottom: 55px;
 }
 
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #999999;
+
+    color: @light-green;
+    text-transform: uppercase;
+    font-size: 14pt;
+}
+
+.sidebar-nav li a i {
+    font-size: 16pt;
+    margin-right: 10px;
 }
 
 .sidebar-nav li a:hover {
+    color: @dark-green;
     text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
 }
 
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
+    color: @dark-green;
     text-decoration: none;
 }
 
-.sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
+.sidebar-nav > .sidebar-brand .logo {
+    height: 150px;
+    width: 85%;
+    margin: 15px 7%;
+    background-image: url('../img/pbioc-logo-full.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
-
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-} /* end sidebar styles */
 
 @media(min-width:767px) {
     #wrapper {
