--- a/less/section/section.less
+++ b/less/section/section.less
@@ -27,6 +27,11 @@
     text-align: center
 }
 
+.shadower {
+    -webkit-box-shadow: 0 0 15px 5px #737373;
+    box-shadow: 0 0 15px 5px #737373;
+}
+
 #landing {
     display: block;
     background: #CFF;
