--- a/less/variables.less
+++ b/less/variables.less
@@ -6,12 +6,15 @@
 @dark: #000;
 @light: #fff;
 @pearl: #FAF9F7;
+
 @menu-link: #5ca676;
+
 @background-menus:rgba(255, 255, 255, 0.9);
 @background-def: #5F854E;
 
 @light-green: #8ab951;
 @dark-green: rgb(8, 148, 68);
+
 @round: 6px;
 @round-inner: 4px;
 
@@ -22,3 +25,9 @@
 @facebook-blue: #3b5998;
 @twitter-blue: #55acee;
 @linkedin-blue: #287bbc;
+
+@shadow-gray: #d2d2d2;
+
+@text-shadow: rgba(0,0,0,0.4);
+@dark-text: rgb(39, 39, 39);
+@light-text: #fff;
