--- a/less/section/section.less
+++ b/less/section/section.less
@@ -22,19 +22,52 @@
     margin: -150px auto 0 auto;
     display: table-cell;
     vertical-align: middle;
-    color: #ffffff;
+    color: @light;
     padding: 0 8%;
     text-align: center
 }
 
-.shadower {
-    -webkit-box-shadow: 0 0 15px 5px #737373;
-    box-shadow: 0 0 15px 5px #737373;
+.section-head {
+    -moz-transform: skewX(15deg) skewY(0deg);
+    -webkit-transform: skewX(15deg) skewY(0deg);
+    -o-transform: skewX(15deg) skewY(0deg);
+    -ms-transform: skewX(15deg) skewY(0deg);
+    transform: skewX(15deg) skewY(0deg);
+
+    -moz-transform: skewX(0deg) skewY(3.5deg);
+    -webkit-transform: skewX(0deg) skewY(3.5deg);
+    -o-transform: skewX(0deg) skewY(3.5deg);
+    -ms-transform: skewX(0deg) skewY(3.5deg);
+    transform: skewX(0deg) skewY(3.5deg);
+
+    background-color: @dark-green;
+    color: @light-text;
+    height: 40px;
+    line-height: 40px;
+    font-size: 14pt;
+    text-align: center;
+}
+
+.odd, .even {
+    padding: 50px 0;
+}
+
+.odd {
+    background-color: @pearl;
+    color: @dark-text;
+}
+
+.odd a {
+    color: @dark-text;
+}
+
+.even {
+    background-color: @light-green;
+    color: @light-text;
 }
 
 #landing {
     display: block;
-    background: #CFF;
     height:100%;
     width:100%;
     box-sizing:border-box;
@@ -45,46 +78,48 @@
     }
 }
 
+#about .about-content {
+    background: @light-green;
+    color: @dark-text;
+    padding: 20px;
+    -webkit-transform: skew(0deg,3.5deg);
+    -moz-transform: skew(0deg,3.5deg);
+    -ms-transform: skew(0deg,3.5deg);
+    -o-transform: skew(0deg,3.5deg);
+    transform: skew(0deg,3.5deg);
+    margin-top: 50px;
+}
+
 #team {
     height: 400px;
     .bcg {
         background-image: url('../img/doctors.jpg');
-        background-color: #fff;
         background-size: 20%;
     }
 }
 
-#methods {
+#procedures {
     height: 510px;
-    .bcg {
-        height: 100%;
-        background: none;
-        background-color: #6ba741;
-        text-align: center
-    }
+}
+
+#medical-issues {
+    height: 510px;
 }
 
 #pricing {
     height: 710px;
     font-weight: 700;
-    .bcg {
-        background: @light;
-    }
 }
 
 #contacts {
     height: 510px;
     text-align: center;
-    .bcg {
-        background-color: #6ba741;
-    }
     iframe {
         border: 4px solid @light;
     }
 }
 
 .contact-section {
-    background-color: #5b9b40;
     display: table;
     width: 100%;
     height: 100%;
