--- a/less/variables.less
+++ b/less/variables.less
@@ -20,6 +20,9 @@
 
 @font-family-body: 'Roboto',Arial,sans-serif;
 @font-family-menus: 'Roboto',Arial,sans-serif;
+// @font-family-content: 'Bad Script', cursive;
+// @font-family-content: 'Open Sans Condensed', sans-serif;
+@font-family-content: 'Poiret One', cursive;
 
 // @main-background-img: url('../img/main-bg.png')
 @facebook-blue: #3b5998;
@@ -29,5 +32,6 @@
 @shadow-gray: #d2d2d2;
 
 @text-shadow: rgba(0,0,0,0.4);
-@dark-text: rgb(39, 39, 39);
+@dark-text: #521C1C;
 @light-text: #fff;
+@dark-green-text: #5EA10C;
