--- a/less/nav/sidebar.less
+++ b/less/nav/sidebar.less
@@ -6,6 +6,9 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+
+    /*Because the sections need to be inside element with height 100%*/
+    height: 100%;
 }
 
 #wrapper.toggled {
