--- a/less/pbioc.less
+++ b/less/pbioc.less
@@ -11,17 +11,12 @@ body, html {
     webkit-tap-highlight-color: fade(@light, 20%);
 }
 
-body {
-    margin: 0;
-    padding: 0;
-}
-
 footer {
     padding: 50px 0;
     p {
         margin: 0;
     }
-    background-color: @light;
+    background-color: @light-green;
     color: @menu-link;
 }
 
@@ -39,7 +34,7 @@ h6 {
 
 p {
     margin: 0 0 25px;
-    font-size: 12px;
+    font-size: 22px;
     line-height: 1;
 }
 
@@ -53,6 +48,11 @@ a {
         text-decoration: none;
         color: darken(@primary,20%);
     }
+}
+
+.main {
+    width: 100%;
+    height: 100%;
 }
 
 .btn {
@@ -85,7 +85,7 @@ a {
 @media(min-width:767px) {
     p {
         margin: 0px;
-        font-size: 20px;
+        font-size: 22px;
         line-height: 1.6;
     }
 }
