--- a/less/variables.less
+++ b/less/variables.less
@@ -32,6 +32,6 @@
 @shadow-gray: #d2d2d2;
 
 @text-shadow: rgba(0,0,0,0.4);
-@dark-text: #521C1C;
+@dark-text: #216B15;
 @light-text: #fff;
 @dark-green-text: #5EA10C;
