Updated sections Contacts and Team

--- a/less/variables.less
+++ b/less/variables.less
@@ -5,7 +5,7 @@
 
 @dark: #000;
 @light: #fff;
-@pearl: #FAF9F7;
+@pearl: #f9f8f6;
 
 @menu-link: #5ca676;
 
@@ -35,3 +35,6 @@
 @dark-text: #216B15;
 @light-text: #fff;
 @dark-green-text: #5EA10C;
+
+@glass: rgba(255, 255, 255, 0.6);
+@dark-glass: rgba(0, 0, 0, 0.6);
