--- a/less/section/section.less
+++ b/less/section/section.less
@@ -36,7 +36,7 @@ section {
 }
 
 .section-head {
-    margin-top: 60px;
+    margin-top: 120px;
     color: @dark-text;
     height: 40px;
     line-height: 40px;
@@ -49,26 +49,28 @@ section {
     content: url('../img/leaf.png');
 }
 
+.section-head:hover:after {
+    -moz-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+
 .content {
     color: @dark;
     padding: 20px;
     p, li {
         font-size: 15pt;
     }
+    ul {
+        list-style-image: url('../img/tiny-leaf.png');
+    }
 }
 
 .paragraph-title {
     color: @dark-text;
     font-size: 15pt;
-}
-
-.odd {
-    background-color: @pearl;
-    color: @dark-text;
-}
-
-.odd a {
-    color: @dark-text;
 }
 
 .even {
@@ -91,7 +93,13 @@ section {
 }
 
 .glass {
-    background: rgba(255, 255, 255, 0.6);
+    background: @glass;
+    width: 100%;
+    height: 100%;
+}
+
+.dark-glass {
+    background: @dark-glass;
     width: 100%;
     height: 100%;
 }
@@ -123,6 +131,12 @@ section {
 }
 
 #procedures {
+    background-color: @light;
+    background-image: url('../img/massage.jpg');
+    background-attachment: fixed;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: right
 }
 
 #pricing {
@@ -130,39 +144,104 @@ section {
 }
 
 #team {
-    .bcg {
-        background-image: url('../img/doctors.jpg');
-        background-size: 20%;
+    background-attachment: fixed;
+    background-image: url('../img/green-bg.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    .section-head {
+        margin-top: 70px;
+        color: @light;
+    }
+
+    .person-img {
+        margin-top: 30px;
+        img {
+            border-radius: 50%;
+        }
+    }
+    .person {
+        color: @light;
+        /*background-color: rgba(17, 69, 6, 0.6);*/
+        padding: 15px 0 15px 40px;
+        font-size: 12pt;
+        border-top: 2px solid @light-green;
+
+        p, li {
+            font-size: 12pt;
+            font-family: @font-family-content;
+            font-weight: bold;
+        }
+        ul {
+            list-style: none;
+        }
+        h2, .person-name {
+            margin: 15px 0;
+            font-size: 14pt;
+            font-weight: bold;
+            font-family: @font-family-content;
+        }
     }
 }
 
 #contacts {
-    text-align: center;
+    color: @dark;
+    font-size: 13pt;
     iframe {
-        border: 4px solid @light;
-    }
-}
+        margin-left: -75px;
+        border: 4px solid @light-green;
+        -webkit-border-radius: 0 10px 0 10px;
+        border-radius: 0 10px 0 10px;
+        -moz-transform: skewX(10deg);
+        -webkit-transform: skewX(10deg);
+        -o-transform: skewX(10deg);
+        -ms-transform: skewX(10deg);
+        transform: skewX(10deg);
 
-.contact-section {
-    display: table;
-    padding: 50px 0;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-
-    table {
-        td {
-            padding: 5px 10px;
-            font-size: 16pt;
-            text-align: left;
-            i {
-                text-align: right;
-            }
+        html {
+            -webkit-border-radius: 0 10px 0 10px;
+            border-radius: 0 10px 0 10px;
         }
     }
-
-    h2 {
-        margin-bottom: 45px;
+    .contacts-row {
+        margin-top: 105px;
+    }
+    .paragraph-title {
+        font-weight: bold;
+    }
+    a, li {
+        font-size: 13pt;
+    }
+    a:hover {
+        color: @light;
+    }
+    ul {
+        list-style: none;
+    }
+    ul li {
+        color: @light;
+        font-weight: bold;
+        text-align: left;
+        padding: 5px;
+        padding-left: 15px;
+        margin: 10px 0;
+        height: 50px;
+        width: 100%;
+        -moz-transform: skewX(18deg);
+        -webkit-transform: skewX(18deg);
+        -o-transform: skewX(18deg);
+        -ms-transform: skewX(18deg);
+        transform: skewX(18deg);
+        background: #639101; /* Old browsers */
+        background: -moz-linear-gradient(-45deg,  #639101 0%, #6abc42 18%, #78c147 42%, #84cc00 67%, #9ddd9f 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#639101), color-stop(18%,#6abc42), color-stop(42%,#78c147), color-stop(67%,#84cc00), color-stop(100%,#9ddd9f)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(-45deg,  #639101 0%,#6abc42 18%,#78c147 42%,#84cc00 67%,#9ddd9f 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(-45deg,  #639101 0%,#6abc42 18%,#78c147 42%,#84cc00 67%,#9ddd9f 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(-45deg,  #639101 0%,#6abc42 18%,#78c147 42%,#84cc00 67%,#9ddd9f 100%); /* IE10+ */
+        background: linear-gradient(135deg,  #639101 0%,#6abc42 18%,#78c147 42%,#84cc00 67%,#9ddd9f 100%); /* W3C */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#639101', endColorstr='#9ddd9f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+        -webkit-border-radius: 0 10px 0 10px;
+        border-radius: 0 10px 0 10px;
     }
 }
